[gd_scene load_steps=19 format=3 uid="uid://bcba60t4g45yo"]

[ext_resource type="Script" path="res://scripts/ui/SelectMenu.gd" id="1_m5m22"]
[ext_resource type="Texture2D" uid="uid://b7xykwtklhj0a" path="res://assets/ui/ability/light_laser.png" id="1_qvh5f"]
[ext_resource type="Texture2D" uid="uid://bqn1p5ntp0wjc" path="res://assets/ui/ability/light_radiance.png" id="2_056nn"]
[ext_resource type="Texture2D" uid="uid://blybg26hcd5n" path="res://assets/ui/ability/light_orb.png" id="3_5ugn1"]
[ext_resource type="Texture2D" uid="uid://cjyi0kquyeaj2" path="res://assets/ui/ability/outline.png" id="3_kvwh7"]
[ext_resource type="Texture2D" uid="uid://dm06cg6eylhll" path="res://assets/ui/ability/dark_malady.png" id="4_5j5kc"]
[ext_resource type="Texture2D" uid="uid://bk61oqfe7bmf7" path="res://assets/ui/ability/dark_assassin.png" id="5_gej5j"]
[ext_resource type="Texture2D" uid="uid://cl20ugbml10ku" path="res://assets/ui/ability/dark_bomb.png" id="6_b63v1"]
[ext_resource type="TileSet" uid="uid://dxwfld8vxgvd6" path="res://misc/leve_tilemap.tres" id="9_rkald"]
[ext_resource type="Texture2D" uid="uid://7dq5c36o50fg" path="res://assets/ui/base_button_3_medium.png" id="9_xmmlc"]
[ext_resource type="Texture2D" uid="uid://dykbw1bykwex0" path="res://assets/ui/base_button_3_medium_hover.png" id="10_8mwiy"]
[ext_resource type="FontFile" uid="uid://c7thntxb1otbu" path="res://misc/ThaleahFat.ttf" id="11_invvd"]
[ext_resource type="Texture2D" uid="uid://bk3vax5asmj7a" path="res://assets/ui/icon_restart.png" id="13_6a2b3"]
[ext_resource type="Texture2D" uid="uid://e83najplr50y" path="res://assets/ui/base_container.png" id="14_bf3bk"]
[ext_resource type="Texture2D" uid="uid://cb7jso5dnc1a4" path="res://assets/ui/icon_home.png" id="14_unl57"]
[ext_resource type="FontFile" uid="uid://dw61yhdajfgpj" path="res://misc/NicoClean-Regular.ttf" id="15_qbv4c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4p3k"]

[sub_resource type="Theme" id="Theme_d8pin"]
TooltipPanel/styles/panel = SubResource("StyleBoxEmpty_j4p3k")

[node name="SelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m5m22")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 148.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Laser" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_qvh5f")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Laser"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Radiance" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_056nn")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Radiance"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Orb" type="TextureButton" parent="CenterContainer/VBoxContainer/Light"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_5ugn1")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Light/Orb"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Dark" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Malady" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_5j5kc")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Malady"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Assassin" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_gej5j")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Assassin"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Bomb" type="TextureButton" parent="CenterContainer/VBoxContainer/Dark"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_b63v1")

[node name="Outline" type="TextureRect" parent="CenterContainer/VBoxContainer/Dark/Bomb"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("3_kvwh7")

[node name="Start" type="TextureButton" parent="CenterContainer/VBoxContainer"]
modulate = Color(0.588235, 0.588235, 0.588235, 0.537255)
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("9_xmmlc")
texture_hover = ExtResource("10_8mwiy")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Start"]
layout_mode = 0
offset_left = 22.0
offset_top = 6.0
offset_right = 62.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(1, 0.92549, 0.839216, 1)
theme_override_fonts/font = ExtResource("11_invvd")
text = "START"

[node name="TileMap" type="TileMap" parent="."]
z_index = -4
tile_set = ExtResource("9_rkald")
format = 2
layer_0/tile_data = PackedInt32Array(0, 4, 0, 65536, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 327680, 4, 0, 393216, 4, 0, 458752, 4, 0, 524288, 4, 0, 589824, 4, 0, 655360, 4, 0, 1, 4, 0, 65537, 4, 0, 131073, 4, 0, 196609, 4, 0, 262145, 4, 0, 327681, 4, 0, 393217, 4, 0, 458753, 4, 0, 524289, 4, 0, 589825, 4, 0, 655361, 4, 0, 2, 4, 0, 65538, 4, 0, 131074, 4, 0, 196610, 4, 0, 262146, 4, 0, 327682, 4, 0, 393218, 4, 0, 458754, 4, 0, 524290, 4, 0, 589826, 4, 0, 655362, 4, 0, 3, 4, 0, 65539, 4, 0, 131075, 4, 0, 196611, 4, 0, 262147, 4, 0, 327683, 4, 0, 393219, 4, 0, 458755, 4, 0, 524291, 4, 0, 589827, 4, 0, 655363, 4, 0, 4, 4, 0, 65540, 4, 0, 131076, 4, 0, 196612, 4, 0, 262148, 4, 0, 327684, 4, 0, 393220, 4, 0, 458756, 4, 0, 524292, 4, 0, 589828, 4, 0, 655364, 4, 0, 5, 4, 0, 65541, 4, 0, 131077, 4, 0, 196613, 4, 0, 262149, 4, 0, 327685, 4, 0, 393221, 4, 0, 458757, 4, 0, 524293, 4, 0, 589829, 4, 0, 655365, 4, 0, 6, 4, 0, 65542, 4, 0, 131078, 4, 0, 196614, 4, 0, 262150, 4, 0, 327686, 4, 0, 393222, 4, 0, 458758, 4, 0, 524294, 4, 0, 589830, 4, 0, 655366, 4, 0, 7, 4, 0, 65543, 4, 0, 131079, 4, 0, 196615, 4, 0, 262151, 4, 0, 327687, 4, 0, 393223, 4, 0, 458759, 4, 0, 524295, 4, 0, 589831, 4, 0, 655367, 4, 0, 8, 4, 0, 65544, 4, 0, 131080, 4, 0, 196616, 4, 0, 262152, 4, 0, 327688, 4, 0, 393224, 4, 0, 458760, 4, 0, 524296, 4, 0, 589832, 4, 0, 655368, 4, 0, 9, 4, 0, 65545, 4, 0, 131081, 4, 0, 196617, 4, 0, 262153, 4, 0, 327689, 4, 0, 393225, 4, 0, 458761, 4, 0, 524297, 4, 0, 589833, 4, 0, 655369, 4, 0, 10, 4, 0, 65546, 4, 0, 131082, 4, 0, 196618, 4, 0, 262154, 4, 0, 327690, 4, 0, 393226, 4, 0, 458762, 4, 0, 524298, 4, 0, 589834, 4, 0, 655370, 4, 0, 11, 4, 0, 65547, 4, 0, 131083, 4, 0, 196619, 4, 0, 262155, 4, 0, 327691, 4, 0, 393227, 4, 0, 458763, 4, 0, 524299, 4, 0, 589835, 4, 0, 655371, 4, 0, 12, 4, 0, 65548, 4, 0, 131084, 4, 0, 196620, 4, 0, 262156, 4, 0, 327692, 4, 0, 393228, 4, 0, 458764, 4, 0, 524300, 4, 0, 589836, 4, 0, 655372, 4, 0, 13, 4, 0, 65549, 4, 0, 131085, 4, 0, 196621, 4, 0, 262157, 4, 0, 327693, 4, 0, 393229, 4, 0, 458765, 4, 0, 524301, 4, 0, 589837, 4, 0, 655373, 4, 0, 14, 4, 0, 65550, 4, 0, 131086, 4, 0, 196622, 4, 0, 262158, 4, 0, 327694, 4, 0, 393230, 4, 0, 458766, 4, 0, 524302, 4, 0, 589838, 4, 0, 655374, 4, 0, 15, 4, 0, 65551, 4, 0, 131087, 4, 0, 196623, 4, 0, 262159, 4, 0, 327695, 4, 0, 393231, 4, 0, 458767, 4, 0, 524303, 4, 0, 589839, 4, 0, 655375, 4, 0, 16, 4, 0, 65552, 4, 0, 131088, 4, 0, 196624, 4, 0, 262160, 4, 0, 327696, 4, 0, 393232, 4, 0, 458768, 4, 0, 524304, 4, 0, 589840, 4, 0, 655376, 4, 0, 17, 4, 0, 65553, 4, 0, 131089, 4, 0, 196625, 4, 0, 262161, 4, 0, 327697, 4, 0, 393233, 4, 0, 458769, 4, 0, 524305, 4, 0, 589841, 4, 0, 655377, 4, 0, 18, 4, 0, 65554, 4, 0, 131090, 4, 0, 196626, 4, 0, 262162, 4, 0, 327698, 4, 0, 393234, 4, 0, 458770, 4, 0, 524306, 4, 0, 589842, 4, 0, 655378, 4, 0, 19, 4, 0, 65555, 4, 0, 131091, 4, 0, 196627, 4, 0, 262163, 4, 0, 327699, 4, 0, 393235, 4, 0, 458771, 4, 0, 524307, 4, 0, 589843, 4, 0, 655379, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, -65518, 4, 0, -65517, 4, 0, -1, 4, 0, 65535, 4, 0, 131071, 4, 0, 196607, 4, 0, 262143, 4, 0, 327679, 4, 0, 393215, 4, 0, 458751, 4, 0, 524287, 4, 0, 589823, 4, 0, 655359, 4, 0, 720895, 4, 0, 786431, 4, 0, -65516, 4, 0, 20, 4, 0, 65556, 4, 0, 131092, 4, 0, 196628, 4, 0, 262164, 4, 0, 327700, 4, 0, 393236, 4, 0, 458772, 4, 0, 524308, 4, 0, 589844, 4, 0, 655380, 4, 0, 720916, 4, 0)

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Reset" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 120.0
offset_top = 68.0
offset_right = 156.0
offset_bottom = 96.0
scale = Vector2(0.7, 0.7)
mouse_default_cursor_shape = 2
theme = SubResource("Theme_d8pin")
texture_normal = ExtResource("13_6a2b3")

[node name="ChooseOneLight" type="Label" parent="Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 48.0
offset_right = 38.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.862745, 0.74902, 0.647059, 1)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("11_invvd")
theme_override_font_sizes/font_size = 7
text = "CHOOSE
ONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseOneDark" type="Label" parent="Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 75.0
offset_right = 38.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0.862745, 0.74902, 0.647059, 1)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("11_invvd")
theme_override_font_sizes/font_size = 7
text = "CHOOSE
ONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 20.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("14_unl57")
ignore_texture_size = true
stretch_mode = 5

[node name="Information" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Container" type="TextureRect" parent="Information"]
layout_mode = 0
offset_left = 152.0
offset_right = 312.0
offset_bottom = 180.0
texture = ExtResource("14_bf3bk")

[node name="Text" type="RichTextLabel" parent="Information/Container"]
layout_mode = 0
offset_left = 28.0
offset_top = 44.0
offset_right = 132.0
offset_bottom = 148.0
theme_override_colors/default_color = Color(0.74902, 0.564706, 0.603922, 1)
theme_override_fonts/normal_font = ExtResource("15_qbv4c")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "An incandescent beam of pure brilliance, scorching all deemed unworthy in its path."
fit_content = true
tab_size = 5

[node name="AbilityName" type="Label" parent="Information/Container"]
layout_mode = 0
offset_left = 24.0
offset_top = 25.0
offset_right = 136.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("11_invvd")
text = "BEAM of no'us"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Laser" to="." method="_on_laser_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Laser" to="." method="_on_laser_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Radiance" to="." method="_on_radiance_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Radiance" to="." method="_on_radiance_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Light/Orb" to="." method="_on_orb_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Light/Orb" to="." method="_on_orb_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Malady" to="." method="_on_malady_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Malady" to="." method="_on_malady_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Assassin" to="." method="_on_assassin_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Assassin" to="." method="_on_assassin_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Dark/Bomb" to="." method="_on_bomb_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Dark/Bomb" to="." method="_on_bomb_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Control/Home" to="." method="_on_home_pressed"]
